<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_CodeInfo" Id="{6b85e474-26b1-45ee-b458-be60c73e9eef}">
    <Declaration><![CDATA[TYPE ST_CodeInfo :
STRUCT
	eCodeType					:	E_CodeType;

	nMinLength					: 	INT;
	nEntireLength					:	INT;
	bValidateEntireLength			: 	BOOL;
	nNumberOfAIs					:	INT;

	stGTIN 						:	ST_CodeValidation	:=		(sFieldName :='GTIN',						bNameEditable := FALSE, 		nGS1_AI := 1);
	stBatchID 						:	ST_CodeValidation	:=		(sFieldName :='BatchID', 				bNameEditable := FALSE, 		nGS1_AI := 10);
	stSerialCode 					:	ST_CodeValidation	:=		(sFieldName :='SerialCode', 			bNameEditable := FALSE, 		nGS1_AI := 21);
	stProductionOrder 				:	ST_CodeValidation	:=		(sFieldName :='ProductionOrder', 		bNameEditable := FALSE, 		nGS1_AI := 91);
	stCryptoCode					:	ST_CodeValidation	:=		(sFieldName :='CryptoCode', 			bNameEditable := FALSE, 		nGS1_AI := 93);
	stRSKU						:	ST_CodeValidation	:=		(sFieldName :='RSKU', 						bNameEditable := FALSE, 		nGS1_AI := 240);
	stMRP		 				:	ST_CodeValidation	:=		(sFieldName :='MRP', 						bNameEditable := FALSE, 		nGS1_AI := 8005);
	stBrandSpecification			:	ST_CodeValidation	:=		(sFieldName :='BrandSpec',			bNameEditable := FALSE, 		nGS1_AI := 92);
	stProduceDate					:	ST_CodeValidation	:=		(sFieldName :='ProduceDate',			bNameEditable := TRUE, 		nGS1_AI := 94);
	stUserField3					:	ST_CodeValidation	:=		(sFieldName :='',						bNameEditable := TRUE, 		nGS1_AI := 95);

END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>